--- a/Frontend/TripSync/src/pages/OurStory/OurStory.css
+++ b/Frontend/TripSync/src/pages/OurStory/OurStory.css
@@ -11,7 +11,7 @@
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
 }
 
-.profile-container {
+.profile-container1 {
   display: flex;
   align-items: center;
   gap: 20px;
